--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,6 @@
 @import "modules/songcolor";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "wrapper";
+@import "body";
+@import "header";
