--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -99,6 +99,10 @@
           }
           &__login {
             margin-left: 30px;
+            display: flex;
+            .userName {
+              margin-left: 5px;
+            }
           }
         }
       }
