--- a/app/views/songcolor/_body.html.haml
+++ b/app/views/songcolor/_body.html.haml
@@ -118,5 +118,8 @@
             = icon('fab', 'youtube')
             movie
           %li.menu-box__login
-            = icon('fas', 'user-circle')
-            login
+            .userIcon
+              = link_to edit_user_path(current_user) do
+                = icon('fas', 'user-circle')
+            .userName
+              = current_user.name
