--- a/app/views/songcolor/_body.html.haml
+++ b/app/views/songcolor/_body.html.haml
@@ -112,8 +112,9 @@
             %input#menu-box__search__fild.song-name__input{placeholder: "search", type: "text"}/
             =icon('fas', 'search', class: 'song-name__icon')
           %li.menu-box__disc
-            = icon('fas', 'compact-disc')
-            disc
+            = link_to songs_path, method: :get, class:"disc-btn" do
+              = icon('fas', 'compact-disc')
+              disc
           %li.menu-box__movie
             = icon('fab', 'youtube')
             movie
@@ -121,5 +122,4 @@
             .userIcon
               = link_to edit_user_path(current_user) do
                 = icon('fas', 'user-circle')
-            .userName
-              = current_user.name
+                = current_user.name
