--- a/app/views/songs/create.html.haml
+++ b/app/views/songs/create.html.haml
@@ -1,4 +1,4 @@
 %h3
   投稿完了しました。
 .back
-  = link_to "もどる", root_path, method: :get, class:"back-btn" 
+  = link_to "一覧へもどる", songs_path, method: :get, class:"back-btn" 
