--- a/app/views/songs/index.html.haml
+++ b/app/views/songs/index.html.haml
@@ -2,4 +2,6 @@
   - @songs.each do |song|
     %div
       = song.name
-      
+      = link_to '削除', song_path(song.id), method: :delete
+  %a.btn{:href => "/"} topへ戻る
+  = link_to "新規投稿", new_song_path, method: :get, class:"back-btn" 
