--- a/app/views/songcolor/_header.html.haml
+++ b/app/views/songcolor/_header.html.haml
@@ -1,3 +1,22 @@
-.Header
-  .header-logo
-  .rigth-menu
+.Nav
+  .nav_box
+    .nav_box__logo-field
+      .nav_box__logo-field__logo
+        VISUALmusic
+      .nav_box__logo-field__right
+        %lu.menu-box
+          %li.menu-box__search
+            %input#menu-box__search__fild.song-name__input{placeholder: "search", type: "text"}/
+            =icon('fas', 'search', class: 'song-name__icon')
+          %li.menu-box__disc
+            = link_to songs_path, method: :get, class:"disc-btn" do
+              = icon('fas', 'compact-disc')
+              disc
+          %li.menu-box__movie
+            = icon('fab', 'youtube')
+            movie
+          %li.menu-box__login
+            .userIcon
+              = link_to edit_user_path(current_user) do
+                = icon('fas', 'user-circle')
+                = current_user.name
