--- a/app/views/songs/_body.html.haml
+++ b/app/views/songs/_body.html.haml
@@ -100,6 +100,14 @@
   %div.right-box
     .right-box__disc
     .right-box__form-box
+      .song_index
+        - @songs.each do |song|
+          %div
+            = song.name
+            = link_to '削除', song_path(song.id), method: :delete
+            -# エラー時はlink_toをbutton_toにかえるのも良い
+        -# %a.btn{:href => "/"} topへ戻る
+        = link_to "新規投稿", new_song_path, method: :get, class:"back-btn"
 
 -# .Nav
 -#   .nav_box
