color create form

--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -107,3 +107,13 @@
   }
 }
 
+.Color {
+  .colorbtn {
+    position: fixed;
+    background-color: #dadada;
+    height: 56px;
+    width: 614px;
+    top: 88px;
+    left: 227px;
+  }
+}
