--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,3 +6,6 @@
 @import "body";
 @import "header";
 @import "modules/user";
+@import "songs_new";
+@import "songs_destroy";
+@import "songs_create";
