--- a/app/views/songcolors/_body.html.haml
+++ b/app/views/songcolors/_body.html.haml
@@ -101,6 +101,11 @@
     .right-box__disc
     .right-box__form-box
 
+
+-# .Color
+-#   .colorbtn
+
+
 -# .Nav
 -#   .nav_box
 -#     .nav_box__logo-field
