--- a/app/views/songs/destroy.html.haml
+++ b/app/views/songs/destroy.html.haml
@@ -1,3 +1,13 @@
-.btn
-  %h3 削除が完了しました。
-= link_to "一覧へもどる", songs_path, method: :get, class:"back-btn" 
+.Destroypage
+  .Destroypage__formbox
+    .dbase
+      .dbtn
+        %h3 削除が完了しました
+        = link_to "一覧へもどる", root_path, method: :get, class:"back-btn" 
+
+= render 'songcolors/header' 
+
+
+
+
+ 
