--- a/app/views/songs/new.html.haml
+++ b/app/views/songs/new.html.haml
@@ -1,9 +1,12 @@
-
 .Base
-  .songForm
-    = form_with url: "/songs", method: :post, html: {class: "Form"}, local: true do |f|
-      .songForm__contents
-        = f.text_field :name, class: 'songForm__input', placeholder: '曲名'
-      = f.submit '送信', class: 'songForm__submit'
+  .Formbox
+    .songbase
+      .inputcomment
+        登録したい曲を入力してください
+      .songForm
+        = form_with url: "/songs", method: :post, html: {class: "Form"}, local: true do |f|
+          .songForm__contents
+            = f.text_field :name, class: 'songForm__input', placeholder: '曲名'
+          = f.submit '送信', class: 'songForm__submit'
 
-        
+= render 'songcolors/header' 
