--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -13,7 +13,7 @@
     overflow: hidden;
     padding-top: 75px;
     &__colors-fild {
-      background-color: snow;
+      // background-color: snow;
       list-style: none;
       display: flex;
       margin-bottom: 2px;
@@ -114,6 +114,6 @@
     height: 56px;
     width: 614px;
     top: 88px;
-    left: 227px;
+    left: 220px;
   }
 }
