--- a/app/views/songcolors/create.html.haml
+++ b/app/views/songcolors/create.html.haml
@@ -1,4 +1,4 @@
 %h3
   色の投稿完了しました。
 .back
-  = link_to "一覧へもどる", root_path, method: :get, class:"back-btn" 
+  = link_to "一覧へもどる", new_songcolor_path, method: :get, class:"back-btn" 
