--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -16,12 +16,14 @@
       // background-color: snow;
       list-style: none;
       display: flex;
-      margin-bottom: 2px;
+      flex-wrap: wrap;
+      width: 617px;
       .color-box {
         background-color: steelblue;
         height: 75px;
         width: 75px;
         margin-right: 2px;
+        margin-bottom: 2px;
         border-radius: 10px;
         &__last {
           background-color: steelblue;
@@ -51,6 +53,8 @@
     }
   }
 }
+
+
 .Nav {
   .nav_box {
     position: fixed;
