--- a/app/views/songcolors/_body.html.haml
+++ b/app/views/songcolors/_body.html.haml
@@ -3,3 +3,16 @@
     %lu.left-box__colors-fild
       - @songcolors.each do |songcolor|
         %li.color-box{style: "background-color:#{songcolor.color}"}
+        
+  %div.right-box
+    .right-box__disc
+    .right-box__form-box
+      -# .song_index
+      -#   - @songs.each do |song|
+      -#     %div
+      -#       = song.name
+      -#       = link_to '削除', song_path(song.id), method: :delete
+      -#       -# エラー時はlink_toをbutton_toにかえるのも良い
+      -#   -# %a.btn{:href => "/"} topへ戻る
+      -#   = link_to "新規投稿", new_song_path, method: :get, class:"back-btn"
+
