--- a/app/views/songcolors/index.html.haml
+++ b/app/views/songcolors/index.html.haml
@@ -3,3 +3,5 @@
     %lu.left-box__colors-fild
       - @songcolors.each do |songcolor|
         %li.color-box{style: "background-color:#{songcolor.color}"}
+
+        -# このページ要らなければ消す
