--- a/app/views/songcolors/_body.html.haml
+++ b/app/views/songcolors/_body.html.haml
@@ -1,8 +1,6 @@
 .Main
   %div.left-box
-    %lu.left-box__colors-fild
-      - @songcolors.each do |songcolor|
-        %li.color-box{style: "background-color:#{songcolor.color}"}
+    = render "songcolors"
         
   %div.right-box
     .right-box__disc
