--- a/app/views/songcolors/index.html.haml
+++ b/app/views/songcolors/index.html.haml
@@ -1,7 +1,4 @@
-.Main
-  %div.left-box
-    %lu.left-box__colors-fild
-      - @songcolors.each do |songcolor|
-        %li.color-box{style: "background-color:#{songcolor.color}"}
-
-        -# このページ要らなければ消す
+.wrapper
+  = render "body"
+  = render "header"
+  = render "colorbtn"
