--- a/app/views/songs/_colorbtn.html.haml
+++ b/app/views/songs/_colorbtn.html.haml
@@ -1,7 +1,9 @@
-.Color
-  .colorbtn
-    .colorForm
-      = form_with model: [@songcolor], url: {action: "create"}, html: {class: "cForm"}, local: true do |f|
-        .colorForm__contents
-          = f.color_field :color, id:"colorid", name:"color", class: 'colorForm__input'
-        = f.submit '送信', class: 'colorForm__submit'
+-# .Color
+-#   .colorbtn
+-#     .colorForm
+-#       = form_with model: [@songcolor], url: {action: "create"}, html: {class: "cForm"}, local: true do |f|
+-#         .colorForm__contents
+-#           = f.color_field :color, id:"colorid", name:"color", class: 'colorForm__input'
+-#         = f.submit '送信', class: 'colorForm__submit'
+
+-# songで読み込んでないなら消すファイル
