--- a/app/views/songs/_body.html.haml
+++ b/app/views/songs/_body.html.haml
@@ -104,9 +104,10 @@
     .right-box__form-box
       .song_index
         - @songs.each do |song|
-          %div
-            = song.name
-            = link_to '削除', song_path(song.id), method: :delete
-            -# エラー時はlink_toをbutton_toにかえるのも良い
-        -# %a.btn{:href => "/"} topへ戻る
-        -# = link_to "新規投稿", new_song_path, method: :get, class:"back-btn"
+          = link_to song_songcolors_path(song),class: "lists" do
+            %div
+              = song.name
+              = link_to '削除', song_path(song.id), method: :delete
+              -# エラー時はlink_toをbutton_toにかえるのも良い
+          -# %a.btn{:href => "/"} topへ戻る
+          -# = link_to "新規投稿", new_song_path, method: :get, class:"back-btn"
