--- a/app/views/songcolors/_songcolors.html.haml
+++ b/app/views/songcolors/_songcolors.html.haml
@@ -1,3 +1,3 @@
 %lu.left-box__colors-fild
-  = @songcolors.each do |songcolor|
+  - @songcolors.each do |songcolor|
     %li.color-box{style: "background-color:#{songcolor.color}"}
