add form of disc viwe

--- a/app/views/discs/edit.html.haml
+++ b/app/views/discs/edit.html.haml
@@ -1,4 +1,5 @@
-= form_with model: @disc, local: true do |f|
-  = f.text_field :name, class: "SettingGroupForm__input", placeholder: "CD名を入力してください"
-  = f.collection_check_boxes :song_ids, Song.all, :id, :name
-  = f.submit "Save", class: "SettingGroupForm__button"
+.header-other
+  = render 'songcolors/header'
+.SettingGroupForm
+  %h1 CD編集
+  = render partial: 'form', locals: { disc: @disc }
