destroy-btn back-btn

--- a/app/views/discs/edit.html.haml
+++ b/app/views/discs/edit.html.haml
@@ -3,3 +3,5 @@
 .SettingGroupForm
   %h1 CD編集
   = render partial: 'form', locals: { disc: @disc }
+  .under-btn
+    = link_to 'Delete', disc_path(@disc.id), method: :delete, class: "SettingGroupForm__button"
