--- a/app/assets/stylesheets/modules/discs.scss
+++ b/app/assets/stylesheets/modules/discs.scss
@@ -30,6 +30,7 @@ li {
   border: 1px solid #ddd;
   border-radius: 5px;
   box-sizing: border-box;
+  position: relative;
   &__field {
     margin-top: 30px;
     display: flex;
@@ -69,6 +70,11 @@ li {
     border: 1px solid #ddd;
     border-radius: 2px;
     text-align: center;
+  }
+  .under-btn {
+    position: absolute;
+    right: 431px;
+    bottom: 40px;
   }
 }
 
