--- a/app/views/discs/new.html.haml
+++ b/app/views/discs/new.html.haml
@@ -3,3 +3,5 @@
 .SettingGroupForm
   %h1 新規CD作成
   = render partial: 'form', locals: { disc: @disc }
+  .under-btn
+    = link_to 'Back', root_path, class: "SettingGroupForm__button"
