--- a/app/views/discs/index.html.haml
+++ b/app/views/discs/index.html.haml
@@ -1,8 +1,12 @@
 .SettingGroupForm
   CD一覧
-
-
-
+  .Newlink
+    = link_to "CDの新規登録", new_disc_path, method: :get, class:"disc-btn"
+.CdList
+  - @discs.each do |disc|
+    = link_to edit_disc_path(disc),class: "CdList" do
+      %div.Song-name.SettingGroupForm
+        = "「#{disc.name}」"
 
 .header-other
   = render 'songcolors/header'
