--- a/app/views/discs/index.html.haml
+++ b/app/views/discs/index.html.haml
@@ -4,7 +4,7 @@
     = link_to "CDの新規登録", new_disc_path, method: :get, class:"disc-btn"
 .CdList
   - @discs.each do |disc|
-    = link_to edit_disc_path(disc),class: "CdList" do
+    = link_to disc_path(disc), method: :get, class: "CdList" do
       %div.Song-name.SettingGroupForm
         = "「#{disc.name}」"
 
