--- a/app/assets/stylesheets/modules/discs.scss
+++ b/app/assets/stylesheets/modules/discs.scss
@@ -1,98 +1,136 @@
-h1 {
-  letter-spacing: 2px;
-  font-size: 24px;
-  font-weight: bold;
-  text-align: center;
-}
-h2 {
-  margin-bottom: 10px;
-  color: #f05050;
-  font-size: 14px;
+// h1 {
+//   letter-spacing: 2px;
+//   font-size: 24px;
+//   font-weight: bold;
+//   text-align: center;
+// }
+// h2 {
+//   margin-bottom: 10px;
+//   color: #f05050;
+//   font-size: 14px;
+// }
+
+// ul {
+//   margin: 0;
+//   padding: 0;
+//   list-style: none;
+// }
+
+// li {
+//   margin: 0;
+//   padding: 0;
+//   font-size: 13px;
+// }
+
+// .SettingGroupForm {
+//   width: 980px;
+//   margin: 160px auto;
+//   padding: 40px;
+//   background-color: #fff;
+//   border: 1px solid #ddd;
+//   border-radius: 5px;
+//   box-sizing: border-box;
+//   position: relative;
+//   &__field {
+//     margin-top: 30px;
+//     display: flex;
+//     justify-content: space-between;
+//   }
+//   &__leftField {
+//     width: 30%;
+//     padding-right: 20px;
+//     padding-left: 20px;
+//     box-sizing: border-box;
+//   }
+//   &__rightField {
+//     width: 70%;
+//   }
+//   &__label {
+//     display: block;
+//     line-height: 50px;
+//     font-weight: bold;
+//     text-align: right;
+//   }
+//   &__input {
+//     width: 100%;
+//     line-height: 30px;
+//     padding: 10px 15px;
+//     box-sizing: border-box;
+//   }
+//   &__button {
+//     display: inline-block;
+//     padding: 12px 20px;
+//     color: #fff;
+//     background-color: #38aef0;
+//     border: 0;
+//   }
+//   &__errors {
+//     margin: 30px 0;
+//     padding: 20px 40px;
+//     border: 1px solid #ddd;
+//     border-radius: 2px;
+//     text-align: center;
+//   }
+//   .under-btn {
+//     position: absolute;
+//     right: 431px;
+//     bottom: 40px;
+//   }
+// }
+
+// .ChatMember {
+//   padding: 0 15px;
+//   line-height: 50px;
+//   font-size: 14px;
+//   border-bottom: 1px solid #ddd;
+//   display: flex;
+//   justify-content: space-between;
+//   &__button {
+//     display: inline-block;
+//     cursor: pointer;
+//   }
+//   &__add {
+//     color: #38aef0;
+//   }
+//   &__remove {
+//     color: #f05050;
+//   }
+// }
+.AllMain {
+  .SenterBox {
+    position: relative;
+    margin: 0 auto;
+    width: 81.667%;
+    padding-top: 100px;
+    .CategrySpace {
+      width: 100%;
+      height: 44px;
+      margin-bottom: 20px;
+      background-color: lightblue;
+    }
+    .CdList {
+      .Song-name {
+        height: 214px;
+        background-color: lightblue;
+        margin-bottom: 2px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        padding-left: 30px;
+        padding-right: 30px;
+      }
+    }
+  }
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-li {
-  margin: 0;
-  padding: 0;
-  font-size: 13px;
-}
-
-.SettingGroupForm {
-  width: 980px;
-  margin: 160px auto;
-  padding: 40px;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-sizing: border-box;
-  position: relative;
-  &__field {
-    margin-top: 30px;
-    display: flex;
-    justify-content: space-between;
-  }
-  &__leftField {
-    width: 30%;
-    padding-right: 20px;
-    padding-left: 20px;
-    box-sizing: border-box;
-  }
-  &__rightField {
-    width: 70%;
-  }
-  &__label {
-    display: block;
-    line-height: 50px;
-    font-weight: bold;
-    text-align: right;
-  }
-  &__input {
-    width: 100%;
-    line-height: 30px;
-    padding: 10px 15px;
-    box-sizing: border-box;
-  }
-  &__button {
-    display: inline-block;
-    padding: 12px 20px;
-    color: #fff;
-    background-color: #38aef0;
-    border: 0;
-  }
-  &__errors {
-    margin: 30px 0;
-    padding: 20px 40px;
-    border: 1px solid #ddd;
-    border-radius: 2px;
-    text-align: center;
-  }
-  .under-btn {
-    position: absolute;
-    right: 431px;
-    bottom: 40px;
-  }
-}
-
-.ChatMember {
-  padding: 0 15px;
-  line-height: 50px;
-  font-size: 14px;
-  border-bottom: 1px solid #ddd;
-  display: flex;
-  justify-content: space-between;
-  &__button {
-    display: inline-block;
-    cursor: pointer;
-  }
-  &__add {
-    color: #38aef0;
-  }
-  &__remove {
-    color: #f05050;
+.Newlink {
+  width: 100px;
+  height: 100px;
+  background-color: #244765;
+  color: rgb(255, 255, 255);
+  position:fixed; 
+  bottom: 20px;
+  right: 20px;
+  .disc-btn {
+    color: white;
   }
 }
