--- a/app/views/discs/index.html.haml
+++ b/app/views/discs/index.html.haml
@@ -1,12 +1,13 @@
-.SettingGroupForm
-  CD一覧
-  .Newlink
-    = link_to "CDの新規登録", new_disc_path, method: :get, class:"disc-btn"
-.CdList
-  - @discs.each do |disc|
-    = link_to disc_path(disc), method: :get, class: "CdList" do
-      %div.Song-name.SettingGroupForm
-        = "「#{disc.name}」"
+.AllMain
+  .SenterBox
+    .CategrySpace
+    .CdList
+      - @discs.each do |disc|
+        = link_to disc_path(disc), method: :get, class: "CdList" do
+          %div.Song-name
+            = "「#{disc.name}」"
 
-.header-other
-  = render 'songcolors/header'
+  .header-other
+    = render 'songcolors/header'
+  .CreatBtn
+    = render 'makeform'
