--- a/app/views/discs/index.html.haml
+++ b/app/views/discs/index.html.haml
@@ -5,7 +5,13 @@
       - @discs.each do |disc|
         = link_to disc_path(disc), method: :get, class: "CdList" do
           %div.Song-name
-            = "「#{disc.name}」"
+            %div.imege
+            %div.Font
+              = "「#{disc.name}」"
+              %div.en
+                　Album/¥3,000+税
+              %div.en
+                　2019.7.24　Release(sample)
 
   .header-other
     = render 'songcolors/header'
