--- a/app/assets/stylesheets/modules/discs_show.scss
+++ b/app/assets/stylesheets/modules/discs_show.scss
@@ -5,13 +5,39 @@
     padding: 10rem 0;
     .DiscShow {
       padding: 5rem;
-      background-color: antiquewhite;
+      border: 1px solid #d1d1d1;
+      border-radius: 10px;
+      .CDimage {
+      height: 375px;
+      width: 371px;
+      background-color: aliceblue;
+      margin: 0 auto;
+      }
+      .SongName {
+        text-align: center;
+        margin: 15px 0 0;
+        font-size: 20px;
+        font-weight: bold;
+        letter-spacing: .05em;
+        line-height: 1.8em;
+      }
+      .Song_Days {
+        text-align: center;
+        &_Release {
+        }
+      }
+      .EditSpace {
+        .EditBtn {
+          text-align: end;
+        }
+      }
     }
     .ListBackBtn {
       padding: 1rem;
-      background-color: antiquewhite;
+      border: 1px solid #d1d1d1;
       margin-top: 40px;
       text-align: center;
+      border-radius: 10px;
     }
   }
 }
