--- a/app/views/discs/show.html.haml
+++ b/app/views/discs/show.html.haml
@@ -8,6 +8,11 @@
         .Song_Release
           %div 2019.7.24　Release(sample)
           %div ¥1.400＋税
+      .Song_Names
+        %div 1.　Sample-A
+        %div 2.　Sample-B
+        %div 3.　Sample-C
+        %div 4.　Sample-D
       .EditSpace
         .EditBtn
           = link_to "編集", edit_disc_path(@disc), class: "cdList"
