--- a/app/views/discs/edit.html.haml
+++ b/app/views/discs/edit.html.haml
@@ -1,7 +1,13 @@
-.SettingGroupForm
-  %h1 CD編集
-  = render partial: 'form', locals: { disc: @disc }
-  .under-btn
-    = link_to 'Delete', disc_path(@disc.id), method: :delete, class: "SettingGroupForm__button"
+.DiscEditBace
+  .DiscEditBace_box
+    .DiscEdit
+      .SettingGroupForm
+        %h1 CD編集
+        = render partial: 'form', locals: { disc: @disc }
+        .under-btn
+          = link_to 'Delete', disc_path(@disc.id), method: :delete, class: "SettingGroupForm__button"
+    .ShowBackBtn
+      = link_to "戻る", disc_path
+
 .header-other
   = render 'songcolors/header'
