--- a/app/assets/stylesheets/modules/discs_edit.scss
+++ b/app/assets/stylesheets/modules/discs_edit.scss
@@ -7,6 +7,17 @@
       padding: 5rem;
       border: 1px solid #d1d1d1;
       border-radius: 10px;
+      .SettingDiscForm {
+        .CDedit {
+          font-weight: bold;
+          font-size: 20px;
+          text-align: center;
+          margin-bottom: 30px;
+        }
+        .under-btn {
+          text-align: end;
+        }
+      }
     }
     .ShowBackBtn {
       padding: 1rem;
@@ -16,4 +27,26 @@
       border-radius: 10px;
     }
   }
+}
+
+
+// CDフォーム（_form.html.haml）
+.SettingDiscForm__field {
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+  .SettingDiscForm__leftField {
+    .SettingDiscForm__label {
+      margin-right: 30px;
+    }
+  }
+}
+
+// 曲名に関して
+label {
+  margin-right: 10px;
+  margin-left: 3px;
+}
+.SettingDiscForm__button {
+  
 }
