--- a/app/views/discs/_form.html.haml
+++ b/app/views/discs/_form.html.haml
@@ -17,6 +17,6 @@
       / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
   .SettingDiscForm__field
     .SettingDiscForm__leftField
-    .SettingDiscForm__rightField
-      = f.submit class: 'SettingDiscForm__button'
+    .SettingDiscForm__rightField-upDateBtn
+      = f.submit "更新", class: 'SettingDiscForm__buttonUP'
  
