--- a/app/views/discs/edit.html.haml
+++ b/app/views/discs/edit.html.haml
@@ -5,7 +5,7 @@
         %h1.CDedit CD編集 
         = render partial: 'form', locals: { disc: @disc }
         .under-btn
-          = link_to 'Delete', disc_path(@disc.id), method: :delete, class: "SettingDiscForm__button"
+          = link_to '削除', disc_path(@disc.id), method: :delete, class: "SettingDiscForm__button"
     .ShowBackBtn
       = link_to "戻る", disc_path
 
