--- a/app/assets/stylesheets/modules/discs.scss
+++ b/app/assets/stylesheets/modules/discs.scss
@@ -102,6 +102,7 @@
     margin: 0 auto;
     width: 81.667%;
     padding-top: 100px;
+    padding-bottom: 100px;
     .CategrySpace {
       width: 100%;
       height: 44px;
@@ -136,6 +137,7 @@
   }
 }
 
+// CDの新規登録ボタン
 .Newlink {
   width: 100px;
   height: 100px;
@@ -144,6 +146,8 @@
   position:fixed; 
   bottom: 20px;
   right: 20px;
+  padding: 35px 10px;
+  border-radius: 55px;
   .disc-btn {
     color: white;
   }
