--- a/app/views/discs/new.html.haml
+++ b/app/views/discs/new.html.haml
@@ -1,8 +1,13 @@
-.SettingGroupForm
-  %h1 新規CD作成
-  = render partial: 'form', locals: { disc: @disc }
-  .under-btn
-    = link_to 'Back', root_path, class: "SettingGroupForm__button"
+.DiscEditBace
+  .DiscEditBace_box
+    .DiscEdit
+      .SettingDiscForm
+        %h1.CDedit 新規CD作成
+        = render partial: 'form', locals: { disc: @disc }
+        -# .under-btn
+        -#   = link_to 'Back', root_path, class: "SettingGroupForm__button"
+    .ShowBackBtn
+      = link_to "戻る", discs_path
 
 .header-other
   = render 'songcolors/header'
