--- a/app/views/discs/_form.html.haml
+++ b/app/views/discs/_form.html.haml
@@ -7,7 +7,7 @@
     .SettingDiscForm__leftField
       = f.label :name, "CDの名前", class: 'SettingDiscForm__label'
     .SettingDiscForm__rightField
-      = f.text_field :name, class: 'SettingDiscForm__input', placeholder: 'CDの名前を入力してください'
+      = f.text_field :name, class: 'SettingDiscForm__input', placeholder: 'CDの名前を入力'
   .SettingDiscForm__field
     .SettingDiscForm__leftField
       %label.SettingDiscForm__label CDに入っている曲を選択
